# git_extra_file

./: README.md
yolov5/: data_enhancement.py  makefile  note.txt  note_cmake_mingw.txt  note_linux.txt  note_opencv_libtorch.txt  remove_duplicate_xml_label.py  xml_txt.py
yolov5/opencv_test/: CMakeLists.txt
yolov5/opencv_test/src/: main.cpp
yolov5/program/: CMakeLists.txt
yolov5/program/first/: CMakeLists.txt
yolov5/program/first/include/: hello.h
yolov5/program/first/src/: hello.cpp  main.cpp
yolov5/program/second/: CMakeLists.txt
yolov5/program/second/include/: hello_.h
yolov5/program/second/src/: hello_.cpp
